--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+/* @import url('https://fonts.googleapis.com/css?family=Roboto'); */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700&display=swap');
 
 /* Global Styles */
 :root {
-  --primary-color: #dc3545;
   --dark-color: #333333;
   --light-color: #f4f4f4;
   --light-gray-color: #bdc3c7;
@@ -16,12 +16,12 @@
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto Slab', serif;
   /* font-family: 'Roboto', sans-serif; */
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
-  color: #333;
+  background-color: var(--light-gray-color);
+  color: white;
 }
 
 a {
@@ -38,7 +38,8 @@ ul {
 }
 
 img {
-  width: 100%;
+  width: 30%;
+  height: auto;
 }
 
 /* Utilities */
@@ -370,7 +371,7 @@ table th {
   padding: 0.7rem 2rem;
   z-index: 1;
   width: 100%;
-  margin-bottom: 2.5rem;
+  margin-bottom: 2rem;
 }
 
 .navbar ul {
@@ -426,4 +427,28 @@ table th {
     text-align: center;
     justify-content: center;
   }
+}
+
+footer {
+  font-size: 0.75em;
+  margin-bottom: 0;
+  margin-top: 10px;
+  padding-top: 5px;
+  text-align: center;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #333333;
+}
+
+footer p {
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-bottom: 10px;
+}
+
+.contact-icons {
+  padding: 3px;
+  font-size: 1.5rem;
 }
