--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css?family=Roboto'); */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700&display=swap');
 
 /* Global Styles */
@@ -179,6 +178,30 @@ img {
   margin: 3rem 0;
 }
 
+.my-top-1 {
+  margin-top: 1rem;
+}
+
+.my-top-2 {
+  margin-top: 2rem;
+}
+
+.my-top-3 {
+  margin-top: 3rem;
+}
+
+.my-bot-1 {
+  margin-bottom: 1rem;
+}
+
+.my-bot-2 {
+  margin-bottom: 2rem;
+}
+
+.my-bot-3 {
+  margin-bottom: 3rem;
+}
+
 /* Grid */
 .grid-2 {
   display: grid;
@@ -229,25 +252,6 @@ img {
   margin-right: 0.2rem;
 }
 
-.badge {
-  display: inline-block;
-  font-size: 0.8rem;
-  padding: 0.2rem 0.7rem;
-  text-align: center;
-  margin: 0.3rem;
-  background: var(--light-color);
-  color: #333;
-  border-radius: 5px;
-}
-
-.alert {
-  padding: 0.7rem;
-  margin: 1rem 0;
-  opacity: 0.9;
-  background: var(--light-color);
-  color: #333;
-}
-
 .btn-primary,
 .bg-primary,
 .badge-primary,
@@ -279,11 +283,6 @@ img {
 .alert-danger {
   background: var(--danger-color);
   color: #fff;
-}
-
-.bg-brown {
-  background: #603813;
-  color: white;
 }
 
 .bg-light-gray {
@@ -321,48 +320,6 @@ img {
   border-radius: 50%;
 }
 
-/* Forms */
-input {
-  /* margin: 1.2rem 0; */
-  margin: 0 auto;
-  margin-bottom: 1rem;
-  border-radius: 1rem;
-}
-
-.form-text {
-  display: block;
-  margin-top: 0.3rem;
-  color: #888;
-}
-
-input[type='text'],
-input[type='email'],
-input[type='password'],
-input[type='date'],
-select,
-textarea {
-  display: block;
-  width: 40%;
-  padding: 0.4rem;
-  font-size: 1.2rem;
-  border: 1px solid #ccc;
-}
-
-input[type='submit'],
-button {
-  font: inherit;
-}
-
-table th,
-table td {
-  padding: 1rem;
-  text-align: left;
-}
-
-table th {
-  background: var(--light-color);
-}
-
 /* Navbar */
 .navbar {
   display: flex;
@@ -371,11 +328,12 @@ table th {
   padding: 0.7rem 2rem;
   z-index: 1;
   width: 100%;
-  margin-bottom: 2rem;
+  margin-bottom: 0.3rem;
 }
 
 .navbar ul {
   display: flex;
+  font-size: 1.6rem;
 }
 
 .navbar a {
@@ -396,6 +354,10 @@ table th {
 @media (max-width: 700px) {
   .hide-sm {
     display: none;
+  }
+
+  .column-pic {
+    margin-top: 5rem;
   }
 
   .grid-2,
@@ -430,12 +392,12 @@ table th {
 }
 
 footer {
-  font-size: 0.75em;
+  font-size: 0.75rem;
   margin-bottom: 0;
   margin-top: 10px;
   padding-top: 5px;
   text-align: center;
-  position: fixed;
+  /* position: fixed; */
   left: 0;
   right: 0;
   bottom: 0;
@@ -452,3 +414,16 @@ footer p {
   padding: 3px;
   font-size: 1.5rem;
 }
+
+.profile-pic {
+  background-image: url(./assets/imgs/profilepic.png);
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  height: 300px;
+  width: 300px;
+}
+
+/* p {
+  line-height: 1.5rem;
+} */
