home logo animation added

--- a/src/App.css
+++ b/src/App.css
@@ -258,68 +258,9 @@ img {
   outline: none;
 }
 
-.btn-link {
-  background: none;
-  padding: 0;
-  margin: 0;
-}
-
-.btn-block {
-  display: block;
-  width: 40%;
-  margin: 0 auto;
-}
-
-.btn-sm {
-  font-size: 0.8rem;
-  padding: 0.3rem 1rem;
-  margin-right: 0.2rem;
-}
-
-.btn-primary,
-.bg-primary,
-.badge-primary,
-.alert-primary {
-  background: var(--primary-color);
-  color: #fff;
-}
-
-.btn-light,
-.bg-light,
-.badge-light,
-.alert-light {
-  background: var(--light-color);
-  color: #333;
-}
-
-.btn-dark,
-.bg-dark,
-.badge-dark,
-.alert-dark {
-  /* background: var(--dark-color); */
-  background: #603813;
-  color: #fff;
-}
-
-.btn-danger,
-.bg-danger,
-.badge-danger,
-.alert-danger {
-  background: var(--danger-color);
-  color: #fff;
-}
-
 .bg-light-gray {
   background: var(--light-gray-color);
   color: black;
-}
-
-.btn-success,
-.bg-success,
-.badge-success,
-.alert-success {
-  background: var(--success-color);
-  color: #fff;
 }
 
 .btn-white,
@@ -459,6 +400,10 @@ footer p {
 .big-logo {
   height: 15rem;
   width: 23rem;
+
+  animation-name: moveInBottom;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
 }
 
 /* p {
@@ -471,4 +416,20 @@ footer p {
 
 .color-tertiary {
   color: #c4bdc7;
+}
+
+/* Animations */
+
+@keyframes moveInBottom {
+  /* beginning of the animation */
+  0% {
+    opacity: 0;
+    transform: translateY(-4rem);
+  }
+
+  /* end of the animation */
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
