--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,6 @@
 
 body {
   font-family: 'Roboto Slab', serif;
-  /* font-family: 'Roboto', sans-serif; */
   font-size: 1rem;
   line-height: 1.6;
   background-color: var(--light-gray-color);
@@ -33,7 +32,6 @@ a {
 
 a:hover {
   transform: translateY(-3px);
-  /* box shadow parameters: x-direction, y-direction, blur, color */
   box-shadow: 0 1rem 2rem rgba(black, 0.2);
 }
 
@@ -108,6 +106,16 @@ img {
 
 .text-left {
   text-align: left;
+}
+
+/* Colors */
+
+.color-pastel {
+  color: var(--pastel-blue);
+}
+
+.color-tertiary {
+  color: #c4bdc7;
 }
 
 /* Center All */
@@ -238,12 +246,6 @@ img {
   grid-gap: 1rem;
 }
 
-.grid-6 {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-gap: 1rem;
-}
-
 .btn {
   display: inline-block;
   background: var(--light-color);
@@ -263,15 +265,6 @@ img {
   color: black;
 }
 
-.btn-white,
-.bg-white,
-.badge-white,
-.alert-white {
-  background: #fff;
-  color: #333;
-  border: #ccc solid 1px;
-}
-
 .btn:hover {
   opacity: 0.8;
 }
@@ -282,11 +275,6 @@ img {
 
 .link-animation {
   transform: translateY(-1px);
-}
-
-.bg-light,
-.badge-light {
-  border: #ccc solid 1px;
 }
 
 .round-img {
@@ -404,18 +392,6 @@ footer p {
   animation-name: moveInBottom;
   animation-duration: 1s;
   animation-timing-function: ease-out;
-}
-
-/* p {
-  line-height: 1.5rem;
-} */
-
-.color-pastel {
-  color: var(--pastel-blue);
-}
-
-.color-tertiary {
-  color: #c4bdc7;
 }
 
 /* Animations */
