--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  height: 100%;
   font-family: 'Roboto Slab', serif;
   font-size: 1rem;
   line-height: 1.6;
@@ -26,7 +27,7 @@ body {
 }
 
 h2 {
-  color: #587698;
+  color: var(--pastel-blue);
 }
 
 a {
@@ -264,6 +265,34 @@ img {
   outline: none;
 }
 
+.btn-narrow {
+  display: inline-block;
+  background: var(--light-color);
+  color: #333;
+  padding: 0.2rem 0.7rem;
+  border-radius: 1rem;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+  margin-right: 0.5rem;
+  transition: opacity 0.2s ease-in;
+  outline: none;
+}
+
+.btn-narrower {
+  display: inline-block;
+  background: var(--light-color);
+  color: #333;
+  padding: 0.2rem 0.6rem;
+  border-radius: 1rem;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+  margin-right: 0.5rem;
+  transition: opacity 0.2s ease-in;
+  outline: none;
+}
+
 .bg-light-gray {
   background: var(--light-gray-color);
   color: black;
@@ -354,6 +383,16 @@ img {
     text-align: center;
     justify-content: center;
   }
+
+  .center-logo {
+    width: 100%;
+    margin: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
 }
 
 footer {
@@ -390,12 +429,24 @@ footer p {
 }
 
 .big-logo {
+  display: block;
+  margin: auto;
   height: 15rem;
   width: 23rem;
 
   animation-name: moveInTop;
   animation-duration: 1s;
   animation-timing-function: ease-out;
+}
+
+.center-logo {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 /* Animations */
