--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 /* Global Styles */
 :root {
   --dark-color: #333333;
+  --dark-blue: #003366;
   --light-color: #f4f4f4;
   --light-gray-color: #bdc3c7;
   --dark-gray-color: #2c3e50;
@@ -21,14 +22,17 @@ body {
   font-family: 'Roboto Slab', serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: var(--light-gray-color);
-  color: white;
+  /* background-color: var(--dark-blue); */
+  background-color: var(--light-color);
+  /* color: white; */
+  color: var(--dark-color);
+  /* color: var(--light-color); */
   margin-bottom: 5rem;
 }
 
-h2 {
+/* h2 {
   color: var(--pastel-blue);
-}
+} */
 
 a {
   color: white;
@@ -253,7 +257,8 @@ img {
 
 .btn {
   display: inline-block;
-  background: var(--light-color);
+  /* background: var(--light-color); */
+  background: var(--light-gray-color);
   color: #333;
   padding: 0.2rem 1.1rem;
   border-radius: 1rem;
@@ -267,7 +272,8 @@ img {
 
 .btn-narrow {
   display: inline-block;
-  background: var(--light-color);
+  /* background: var(--light-color); */
+  background: var(--light-gray-color);
   color: #333;
   padding: 0.2rem 0.7rem;
   border-radius: 1rem;
@@ -281,7 +287,8 @@ img {
 
 .btn-narrower {
   display: inline-block;
-  background: var(--light-color);
+  /* background: var(--light-color); */
+  background: var(--light-gray-color);
   color: #333;
   padding: 0.2rem 0.6rem;
   border-radius: 1rem;
@@ -331,13 +338,15 @@ img {
 }
 
 .navbar a {
-  color: #fff;
+  /* color: #fff; */
+  color: var(--dark-color);
   padding: 0.45rem;
   margin: 0 0.25rem;
 }
 
 .navbar a:hover {
-  color: var(--light-color);
+  /* color: var(--light-color); */
+  color: var(--light-gray-color);
 }
 
 .navbar .welcome span {
@@ -405,7 +414,8 @@ footer {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #333333;
+  /* background-color: #333333; */
+  background-color: var(--light-gray-color);
 }
 
 footer p {
