base font changed

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap');
 
 /* Global Styles */
 :root {
   --dark-color: #333333;
-  --dark-blue: #003366;
+  --dark-blue: #0e0c1b;
   --light-color: #f4f4f4;
   --light-gray-color: #bdc3c7;
   --dark-gray-color: #2c3e50;
@@ -19,12 +19,11 @@
 
 body {
   height: 100%;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Quicksand', serif;
   font-size: 1rem;
   line-height: 1.6;
   /* background-color: var(--dark-blue); */
   background-color: var(--light-color);
-  /* color: white; */
   color: var(--dark-color);
   /* color: var(--light-color); */
   margin-bottom: 5rem;
